Adicionado página de perguntas e fim do quiz. disposição dos elementos no index inicial foi ajustada, por meio do CSS e do Bootstrap. Arquivo em Javascript foi inicializado, começando o desenvolvimento a partir do arquivo quiz base, "Javascript in terminal". Modificado e criada toda a parte do CSS das novas páginas criadas.

--- a/end_quiz.html
+++ b/end_quiz.html
@@ -8,29 +8,37 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="./style_quiz.css">
-    <title>Quiz | Início</title>
+    <title>Thanks for Playing! | Quiz Game</title>
 </head>
 
 <body>
     <div class="container-fluid background-container">
-        <div class="main-container">
+        <!-- MENU QUIZ  -->
+        <div class="container menu-quiz d-flex pt-3">
+            <img src="./images/logo.png" alt="logo">
+            <div class="text-menu ps-3 text-white">
+                <p class="insert_name text-name">Victor</p>
+                <p class="points text-name">Pontuação: 100</p>
+            </div>
+        </div>
+        <div class="end-container">
             <div class="container">
                 <!-- logotipo  -->
                 <div class="d-flex justify-content-center">
-                    <img src="./images/logo.png" alt="logo" class="logoindex">
+                    <img src="./images/trofeu 1.png" alt="logo" class="logoindex">
                 </div>
-                <div class="d-flex justify-content-center p-3">
-                    <input class="form-control indexbutton" type="text" placeholder="Default input"
-                        aria-label="default input example">
+                <div class="d-flex justify-content-center p-3 text-white">
+                    <p>Parabéns Victor!</p>
+                    <p>VOCÊ FEZ 100 PONTOS!</p>
                 </div>
                 <div class="d-flex justify-content-center">
-                    <button type="button" class="btn btn-primary indexbutton">Jogar!</button>
+                    <button type="button" class="btn btn-primary indexbutton">Jogar novamente!</button>
                 </div>
             </div>
         </div>
-            <footer class="text-center github">
-                <a href="https://github.com/victorrsou">https://github.com/victorrsou</a>
-            </footer>
+        <footer class="text-center github">
+            <a href="https://github.com/victorrsou">https://github.com/victorrsou</a>
+        </footer>
     </div>
 </body>
 <!-- JAVASCRIPT BOOTSTRAP  -->
