Endereço github ajustado em todas as páginas HTML.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
         </div>
             <footer class="text-center github">
-                <a href="https://github.com/victorrsou">https://github.com/victorrsou</a>
+                <a href="https://github.com/victorrsou">github.com/victorrsou</a>
             </footer>
     </div>
 </body>
