--- a/quiz_game.html
+++ b/quiz_game.html
@@ -21,7 +21,7 @@
                 <p class="points text-name">Pontuação: 100</p>
             </div>
             <div class="github mx-auto">
-                <a href="https://github.com/victorrsou">https://github.com/victorrsou</a>
+                <a href="https://github.com/victorrsou">github.com/victorrsou</a>
             </div>
             <p class="current_question text-current-question text-white">1/10</p>
         </div>
