--- a/quiz_game.html
+++ b/quiz_game.html
@@ -17,8 +17,8 @@
         <div class="container menu-quiz d-flex pt-3">
             <img src="./images/logo.png" alt="logo">
             <div class="text-menu ps-3 text-white">
-                <p class="insert_name text-name">Victor</p>
-                <p class="points text-name">Pontuação: 100</p>
+                <p class="text-name" id="nome_jogador">Victor</p>
+                <p class="text-name">Pontuação: 100</p>
             </div>
             <div class="github mx-auto">
                 <a href="https://github.com/victorrsou">github.com/victorrsou</a>
@@ -38,7 +38,7 @@
                     A
                 </div>
                 <div class="col text-answer">
-                    <button type="button" class="shadow btn btn-light answerbutton text-start"
+                    <button type="button" class="shadow btn btn-light answerbutton text-start" data-bs-toggle="button"
                         id="alternativa_a">ALTERNATIVA A</button>
                 </div>
             </div>
@@ -47,7 +47,7 @@
                     B
                 </div>
                 <div class="col text-answer">
-                    <button type="button" class="shadow btn btn-light answerbutton text-start"
+                    <button type="button" class="shadow btn btn-light answerbutton text-start" data-bs-toggle="button"
                         id="alternativa_b">ALTERNATIVA B</button>
                 </div>
             </div>
@@ -56,7 +56,7 @@
                     C
                 </div>
                 <div class="col text-answer">
-                    <button type="button" class="shadow btn btn-light answerbutton text-start"
+                    <button type="button" class="shadow btn btn-light answerbutton text-start" data-bs-toggle="button"
                         id="alternativa_c">ALTERNATIVA C</button>
                 </div>
             </div>
@@ -65,7 +65,7 @@
                     D
                 </div>
                 <div class="col text-answer">
-                    <button type="button" class="shadow btn btn-light answerbutton text-start"
+                    <button type="button" class="shadow btn btn-light answerbutton text-start" data-bs-toggle="button"
                         id="alternativa_d">ALTERNATIVA D</button>
                 </div>
             </div>
@@ -74,7 +74,7 @@
                     E
                 </div>
                 <div class="col text-answer">
-                    <button type="button" class="shadow btn btn-light answerbutton text-start"
+                    <button type="button" class="shadow btn btn-light answerbutton text-start" data-bs-toggle="button"
                         id="alternativa_e">ALTERNATIVA E</button>
                 </div>
             </div>
