reajustada a função que captura o nome do jogador.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="d-flex justify-content-center">
                     <!-- BOTÃO JOGAR  -->
                     <button href="./quiz_game.html" type="button" class="btn btn-primary indexbutton" disabled id="botao_jogar"
-                        onclick="capturarnome(), redirecionar()">Jogar!</button>
+                        onclick="capturarnome()">Jogar!</button>
                 </div>
             </div>
         </div>
