--- a/quiz_game.html
+++ b/quiz_game.html
@@ -17,11 +17,8 @@
         <div class="container menu-quiz d-flex pt-3">
             <img src="./images/logo.png" alt="logo">
             <div class="text-menu ps-3 text-white">
-                <p class="text-name" id="nome_jogador">Victor</p>
+                <span class="text-name" id="nome_jogador">Victor</span>
                 <p class="text-name">Pontuação: 100</p>
-            </div>
-            <div class="github mx-auto">
-                <a href="https://github.com/victorrsou">github.com/victorrsou</a>
             </div>
             <p class="current_question text-current-question text-white">1/10</p>
         </div>
@@ -38,7 +35,7 @@
                     A
                 </div>
                 <div class="col text-answer">
-                    <button type="button" class="shadow btn btn-light answerbutton text-start" data-bs-toggle="button"
+                    <button type="button" class="shadow btn btn-light answerbutton text-start alternativa" data-bs-toggle="button"
                         id="alternativa_a">ALTERNATIVA A</button>
                 </div>
             </div>
@@ -47,7 +44,7 @@
                     B
                 </div>
                 <div class="col text-answer">
-                    <button type="button" class="shadow btn btn-light answerbutton text-start" data-bs-toggle="button"
+                    <button type="button" class="shadow btn btn-light answerbutton text-start alternativa" data-bs-toggle="button"
                         id="alternativa_b">ALTERNATIVA B</button>
                 </div>
             </div>
@@ -56,7 +53,7 @@
                     C
                 </div>
                 <div class="col text-answer">
-                    <button type="button" class="shadow btn btn-light answerbutton text-start" data-bs-toggle="button"
+                    <button type="button" class="shadow btn btn-light answerbutton text-start alternativa" data-bs-toggle="button"
                         id="alternativa_c">ALTERNATIVA C</button>
                 </div>
             </div>
@@ -65,7 +62,7 @@
                     D
                 </div>
                 <div class="col text-answer">
-                    <button type="button" class="shadow btn btn-light answerbutton text-start" data-bs-toggle="button"
+                    <button type="button" class="shadow btn btn-light answerbutton text-start alternativa" data-bs-toggle="button"
                         id="alternativa_d">ALTERNATIVA D</button>
                 </div>
             </div>
@@ -74,7 +71,7 @@
                     E
                 </div>
                 <div class="col text-answer">
-                    <button type="button" class="shadow btn btn-light answerbutton text-start" data-bs-toggle="button"
+                    <button type="button" class="shadow btn btn-light answerbutton text-start alternativa" data-bs-toggle="button"
                         id="alternativa_e">ALTERNATIVA E</button>
                 </div>
             </div>
@@ -84,6 +81,9 @@
         <div class="d-flex justify-content-center">
             <button type="button" class="btn btn-primary gamebutton">Próxima pergunta</button>
         </div>
+        <footer class="text-center github mt-5">
+            <a href="https://github.com/victorrsou">github.com/victorrsou</a>
+        </footer>
     </div>
 </body>
 <!-- JAVASCRIPT BOOTSTRAP  -->
