adicionado função para que seja marcado somente uma alternativa.

--- a/quiz_game.html
+++ b/quiz_game.html
@@ -35,8 +35,8 @@
                     A
                 </div>
                 <div class="col text-answer">
-                    <button type="button" class="shadow btn btn-light answerbutton text-start alternativa" data-bs-toggle="button"
-                        id="alternativa_a">ALTERNATIVA A</button>
+                    <button type="button" class="shadow btn btn-light answerbutton text-start alternativa"
+                        onclick="selecionaropcao(1)" id="alternativa_a">ALTERNATIVA A</button>
                 </div>
             </div>
             <div class="row mt-3 mb-3 answer-full">
@@ -44,8 +44,8 @@
                     B
                 </div>
                 <div class="col text-answer">
-                    <button type="button" class="shadow btn btn-light answerbutton text-start alternativa" data-bs-toggle="button"
-                        id="alternativa_b">ALTERNATIVA B</button>
+                    <button type="button" class="shadow btn btn-light answerbutton text-start alternativa"
+                        onclick="selecionaropcao(2)" id="alternativa_b">ALTERNATIVA B</button>
                 </div>
             </div>
             <div class="row mt-3 mb-3 answer-full">
@@ -53,8 +53,8 @@
                     C
                 </div>
                 <div class="col text-answer">
-                    <button type="button" class="shadow btn btn-light answerbutton text-start alternativa" data-bs-toggle="button"
-                        id="alternativa_c">ALTERNATIVA C</button>
+                    <button type="button" class="shadow btn btn-light answerbutton text-start alternativa"
+                        onclick="selecionaropcao(3)" id="alternativa_c">ALTERNATIVA C</button>
                 </div>
             </div>
             <div class="row mt-3 mb-3 answer-full">
@@ -62,8 +62,8 @@
                     D
                 </div>
                 <div class="col text-answer">
-                    <button type="button" class="shadow btn btn-light answerbutton text-start alternativa" data-bs-toggle="button"
-                        id="alternativa_d">ALTERNATIVA D</button>
+                    <button type="button" class="shadow btn btn-light answerbutton text-start alternativa"
+                        onclick="selecionaropcao(4)" id="alternativa_d">ALTERNATIVA D</button>
                 </div>
             </div>
             <div class="row mt-3 mb-3 answer-full">
@@ -71,17 +71,17 @@
                     E
                 </div>
                 <div class="col text-answer">
-                    <button type="button" class="shadow btn btn-light answerbutton text-start alternativa" data-bs-toggle="button"
-                        id="alternativa_e">ALTERNATIVA E</button>
+                    <button type="button" class="shadow btn btn-light answerbutton text-start alternativa"
+                        onclick="selecionaropcao(5)" id="alternativa_e">ALTERNATIVA E</button>
                 </div>
             </div>
         </div>
 
         <!-- NEXT QUESTION BUTTON  -->
-        <div class="d-flex justify-content-center">
-            <button type="button" class="btn btn-primary gamebutton">Próxima pergunta</button>
+        <div class="d-flex justify-content-center btnnextquestion">
+            <button type="button" class="letter-answer btn btn-primary gamebutton">Próxima pergunta</button>
         </div>
-        <footer class="text-center github mt-5">
+        <footer class="text-center github mt-2">
             <a href="https://github.com/victorrsou">github.com/victorrsou</a>
         </footer>
     </div>
