background reajustado. efeitos de sombra adicionados nos botões. função do somatório de pontos e redirecionamento para a página final reajustado.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <title>Quiz | Início</title>
 </head>
 
-<body>
-    <div class="container-fluid background-container">
+<body class="background-container">
+    <div class="container-fluid background-formas">
         <div class="main-container">
             <div class="container">
                 <!-- logotipo  -->
