--- a/quiz_game.html
+++ b/quiz_game.html
@@ -11,8 +11,8 @@
     <title>Quiz Game</title>
 </head>
 
-<body>
-    <div class="container-fluid background-container-game">
+<body class="background-container-game">
+    <div class="container-fluid background-formas">
         <!-- MENU QUIZ  -->
         <div class="container menu-quiz d-flex pt-3">
             <img src="./images/logo.png" alt="logo">
@@ -79,7 +79,7 @@
 
         <!-- NEXT QUESTION BUTTON  -->
         <div class="d-flex justify-content-center btnnextquestion">
-            <button type="button" class="letter-answer btn btn-primary gamebutton" onclick="proximapergunta()">Próxima pergunta</button>
+            <button type="button" class="letter-answer btn btn-primary gamebutton shadow" onclick="proximapergunta()">Próxima pergunta</button>
         </div>
         <footer class="text-center github mt-3">
             <a href="https://github.com/victorrsou">github.com/victorrsou</a>
