--- a/end_quiz.html
+++ b/end_quiz.html
@@ -11,16 +11,17 @@
     <title>Thanks for Playing! | Quiz Game</title>
 </head>
 
-<body>
-    <div class="container-fluid background-container">
+<body class="background-container">
+    <div class="container-fluid background-formas">
         <!-- MENU QUIZ  -->
         <div class="container menu-quiz d-flex pt-3">
             <img src="./images/logo.png" alt="logo">
             <div class="text-menu ps-3 text-white">
-                <p class="insert_name text-name">Victor</p>
-                <p class="points text-name">Pontuação: 100</p>
+                <span class="text-name" id="nome_jogador">Victor</span>
+                <p class="text-name">Pontuação: <span id="pontuacao">0</span></p>
             </div>
         </div>
+
         <div class="end-container">
             <div class="container">
                 <!-- logotipo  -->
@@ -28,11 +29,11 @@
                     <img src="./images/trofeu 1.png" alt="logo" class="logoindex">
                 </div>
                 <div class="d-flex justify-content-center p-3 text-white">
-                    <p>Parabéns Victor!</p>
-                    <p>VOCÊ FEZ 100 PONTOS!</p>
+                    <p>Parabéns!</p>
+                    <p>Você fez <span id="pontuacao">0</span> pontos!</p>
                 </div>
                 <div class="d-flex justify-content-center">
-                    <button type="button" class="btn btn-primary indexbutton">Jogar novamente!</button>
+                    <button type="button" class="letter-answer text-white gamebutton shadow btn-primary indexbutton">Jogar novamente!</button>
                 </div>
             </div>
         </div>
