margens ajustadas para responsividade, ajuste

--- a/quiz_game.html
+++ b/quiz_game.html
@@ -29,8 +29,8 @@
         </div>
 
         <!-- ANSWERS TAB  -->
-        <div class="container answer-tab">
-            <div class="row mt-3 mb-3 answer-full">
+        <div class="container answer-tab mb-3">
+            <div class="row answer-full mb-2">
                 <div class="col letter-answer text-center text-white">
                     A
                 </div>
@@ -39,7 +39,7 @@
                         onclick="selecionaropcao(1)" id="alternativa_a">ALTERNATIVA A</button>
                 </div>
             </div>
-            <div class="row mt-3 mb-3 answer-full">
+            <div class="row answer-full mb-2">
                 <div class="col letter-answer text-center text-white">
                     B
                 </div>
@@ -48,7 +48,7 @@
                         onclick="selecionaropcao(2)" id="alternativa_b">ALTERNATIVA B</button>
                 </div>
             </div>
-            <div class="row mt-3 mb-3 answer-full">
+            <div class="row answer-full mb-2">
                 <div class="col letter-answer text-center text-white">
                     C
                 </div>
@@ -57,7 +57,7 @@
                         onclick="selecionaropcao(3)" id="alternativa_c">ALTERNATIVA C</button>
                 </div>
             </div>
-            <div class="row mt-3 mb-3 answer-full">
+            <div class="row answer-full mb-2">
                 <div class="col letter-answer text-center text-white">
                     D
                 </div>
@@ -66,7 +66,7 @@
                         onclick="selecionaropcao(4)" id="alternativa_d">ALTERNATIVA D</button>
                 </div>
             </div>
-            <div class="row mt-3 mb-3 answer-full">
+            <div class="row answer-full mb-2">
                 <div class="col letter-answer text-center text-white">
                     E
                 </div>
