adicionada função que mostra a alternativa correta por dois segundos.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </div>
                 <div class="d-flex justify-content-center p-3">
                     <!-- INSERIR O NOME  -->
-                    <input class="form-control indexbutton" type="text" placeholder="Default input"
+                    <input class="form-control indexbutton" type="text" placeholder="Digite seu nome"
                         aria-label="default input example" id="input_nome" oninput="verificarinput()">
                 </div>
                 <div class="d-flex justify-content-center">
