--- a/end_quiz.html
+++ b/end_quiz.html
@@ -18,7 +18,6 @@
             <img src="./images/logo.png" alt="logo">
             <div class="text-menu ps-3 text-white">
                 <span class="text-name" id="nome_jogador">Victor</span>
-                <p class="text-name">Pontuação: <span id="pontuacao">0</span></p>
             </div>
         </div>
 
@@ -30,7 +29,7 @@
                 </div>
                 <div class="d-flex justify-content-center p-3 text-white">
                     <p>Parabéns!</p>
-                    <p>Você fez <span id="pontuacao">0</span> pontos!</p>
+                    <p>Você fez <span id="pontuacaoend" class="destaquepontos">0</span> pontos!</p>
                 </div>
                 <div class="d-flex justify-content-center">
                     <button type="button" class="letter-answer text-white gamebutton shadow btn-primary indexbutton">Jogar novamente!</button>
@@ -41,11 +40,18 @@
             <a href="https://github.com/victorrsou">github.com/victorrsou</a>
         </footer>
     </div>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            var urlParams = new URLSearchParams(window.location.search);
+            var pontos = urlParams.get("pontos");
+            var tagpontosfim = document.getElementById("pontuacaoend");
+            tagpontosfim.textContent = pontos;
+        });
+    </script>
 </body>
 <!-- JAVASCRIPT BOOTSTRAP  -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous"></script>
 <script src="./quiz_game.js"></script>
-
 </html>
