--- a/end_quiz.html
+++ b/end_quiz.html
@@ -27,12 +27,12 @@
                 <div class="d-flex justify-content-center">
                     <img src="./images/trofeu 1.png" alt="logo" class="logoindex">
                 </div>
-                <div class="d-flex justify-content-center p-3 text-white">
-                    <p>Parabéns!</p>
-                    <p>Você fez <span id="pontuacaoend" class="destaquepontos">0</span> pontos!</p>
+                <div class="d-flex justify-content-center p-3 text-white mensagemfinal">
+                    <p class="mensagemfinalprimeira">Parabéns!</p>
+                    <p class="mensagemfinalsegunda">Você fez <span id="pontuacaoend" class="destaquepontos">0</span> pontos!</p>
                 </div>
                 <div class="d-flex justify-content-center">
-                    <button type="button" class="letter-answer text-white gamebutton shadow btn-primary indexbutton">Jogar novamente!</button>
+                    <button type="button" class="letter-answer text-white gamebutton shadow btn-primary indexbutton" onclick="jogarnovamente()">Jogar novamente!</button>
                 </div>
             </div>
         </div>
