ajuste na responsividade do botão inicial, no arquivo index.

--- a/end_quiz.html
+++ b/end_quiz.html
@@ -25,18 +25,21 @@
             <div class="container">
                 <!-- logotipo  -->
                 <div class="d-flex justify-content-center">
-                    <img src="./images/trofeu 1.png" alt="logo" class="logoindex">
+                    <img src="./images/trofeu 1.png" alt="logo" class="logofim">
                 </div>
                 <div class="d-flex justify-content-center p-3 text-white mensagemfinal">
                     <p class="mensagemfinalprimeira">Parabéns!</p>
-                    <p class="mensagemfinalsegunda">Você fez <span id="pontuacaoend" class="destaquepontos">0</span> pontos!</p>
+                    <p class="mensagemfinalsegunda">Você fez <span id="pontuacaoend" class="destaquepontos">0</span>
+                        pontos!</p>
                 </div>
                 <div class="d-flex justify-content-center">
-                    <button type="button" class="letter-answer text-white gamebutton shadow btn-primary indexbutton" onclick="jogarnovamente()">Jogar novamente!</button>
+                    <button type="button" class="letter-answer text-white gamebutton shadow btn-primary indexbutton"
+                        onclick="jogarnovamente()">Jogar novamente!</button>
                 </div>
             </div>
         </div>
-        <footer class="text-center github">
+
+        <footer class="text-center githubfim">
             <a href="https://github.com/victorrsou">github.com/victorrsou</a>
         </footer>
     </div>
@@ -46,4 +49,5 @@
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous"></script>
 <script src="./quiz_game.js"></script>
+
 </html>
