--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="d-flex justify-content-center p-2">
                     <!-- BOTÃO JOGAR  -->
-                    <button href="./quiz_game.html" type="button" class="btn btn-primary indexbutton" disabled id="botao_jogar"
+                    <button href="./paginas/quiz_game.html" type="button" class="btn btn-primary indexbutton" disabled id="botao_jogar"
                         onclick="capturarnome()">Jogar!</button>
                 </div>
             </div>
